# pydoover

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: migrate-app.md
.claude/docs/: migration-guide.md
.github/workflows/: lint-test.yml  push_to_apt.yml
debian/: changelog  control  rules
docs/: 00-Index.md  01-Getting-Started.md  02-Quick-Reference.md  03-Project-Structure.md  10-Application-Framework.md  11-Application-Lifecycle.md  12-Tags-and-Channels.md  20-Configuration-System.md  21-Config-Types.md  22-Config-Schema-Export.md  30-UI-System-Overview.md  31-UI-Variables.md  32-UI-Interactions.md  33-UI-Containers.md  34-UI-Decorators.md  40-Cloud-API.md  41-Cloud-Processors.md  42-Channels-and-Messages.md  50-gRPC-Interfaces.md  51-Device-Agent-Interface.md  52-Platform-Interface.md  53-Modbus-Interface.md  60-Utilities.md  61-State-Machine.md  62-Reports.md  70-Tutorial-Basic-App.md  71-Tutorial-UI-Elements.md  72-Tutorial-Modbus.md  73-Example-Patterns.md
docs/source/: changelog.rst  index.rst  ui.rst
examples/: docker_application.py
examples/processor/: target.py
examples/simple_app/: app_config.py  application.py
protos/: Doover Control API.yaml  device_agent.proto  generate.sh  modbus_iface.proto  platform_iface.proto
pydoover/: __init__.py  rpc.py
pydoover/api/: __init__.py  _async.py  _base.py  _compress.py  _iterators.py  _json.py  _sync.py
pydoover/cli/: cli.py  decorators.py  parsers.py  sub_section.py
pydoover/config/: __init__.py
pydoover/docker/: __init__.py  application.py  grpc_interface.py
pydoover/models/: __init__.py  aggregate.py  alarm.py  attachment.py  channel.py  connection.py  events.py  exceptions.py  message.py  processor_info.py  timeseries.py  turn_credential.py  wss_connection.py
pydoover/processor/: __init__.py  _logging.py  application.py  config.py  data_client.py  handler.py
pydoover/reports/: application.py  data.py
pydoover/tags/: __init__.py  manager.py
pydoover/testing/: __init__.py  (+1 more)
scripts/: generate_control_api_clients.py  generate_control_models.py  scratch_fetch_message_logs.py
tests/: conftest.py  test_api.py  test_api_auth.py  test_api_control_async.py  test_api_control_codegen.py  test_api_control_live.py  test_api_control_sync.py  test_api_data.py  test_api_data_live.py  test_cli.py  test_config.py  test_control_api_async.py  test_control_api_codegen.py  test_control_api_live.py  test_control_api_sync.py  test_control_models.py  test_device_agent.py  test_grpc_interface_channel.py  test_iterators_live.py  test_models.py  test_models_control.py  test_models_data.py  test_platform_location.py  test_processor_logging.py  test_processor_testing.py  test_proto_json.py  test_rpc.py  test_tags.py  test_ui.py  test_ui_rpc.py
(+96 files in other folders)
