[project]
name = "pydoover"
authors = [{ name = "Doover Team", email = "developers@doover.com" }]
version = "1.0.0a10"
description = "Python package for interacting with Doover"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["doover", "pydoover", "doover cli"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    "Natural Language :: English",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohttp>=3.12.13",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
grpc = [
    "grpcio==1.65.1",
    "protobuf==5.28.2",
]
reports = [
    "croniter>=6.0.0",
]
test = [
    "jsonschema>=4.23.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "grpcio==1.65.1",
    "protobuf==5.28.2",
    "grpcio-health-checking==1.65.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
dev = [
    "grpcio-tools>=1.65.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
]


[project.urls]
Homepage = "https://doover.com"

[project.scripts]
pydoover = "pydoover.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "live: tests that call live external Doover services",
]

[tool.ruff]
exclude = [
    "pydoover/models/generated",
]

[tool.ty.src]
exclude = [
    "pydoover/models/generated",
]

[tool.ty.rules]
invalid-parameter-default = "ignore"
possibly-missing-submodule = "ignore"

[[tool.ty.overrides]]
include = [
    "pydoover/cloud/api/channel.py",
    "pydoover/cloud/api/client_v1.py",
    "pydoover/cloud/api/client_v2.py",
    "pydoover/cloud/processor/data_client.py",
    "pydoover/cloud/processor/handler.py",
    "pydoover/cloud/processor/types.py",
    "pydoover/cloud/reports/application.py",
    "pydoover/config/__init__.py",
    "pydoover/docker/application.py",
    "pydoover/docker/device_agent/device_agent.py",
    "pydoover/docker/device_agent/models.py",
    "pydoover/docker/grpc_interface.py",
    "pydoover/docker/modbus/modbus_iface.py",
    "pydoover/docker/platform/platform.py",
    "pydoover/reports/base.py",
    "pydoover/reports/json_flatten.py",
    "pydoover/reports/xlsx_base.py",
    "pydoover/state/__init__.py",
    "pydoover/tags/manager.py",
    "pydoover/ui/parameter.py",
    "pydoover/ui/submodule.py",
    "pydoover/utils/alarm.py",
    "pydoover/utils/kalman.py",
    "tests/test_config.py",
    "tests/test_diffs.py",
]

[tool.ty.overrides.rules]
all = "ignore"
